[package]
name = "warp-websocket-server-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tungstenite = { version="0.14.0", features = ["rustls-tls"]}
url = "2.1.0"